fix: pages localization and word wrapping

--- a/src/_static/css/prism.css
+++ b/src/_static/css/prism.css
@@ -10,7 +10,7 @@ pre[class*="language-"] {
 	font-family: "Consolas", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
 	direction: ltr;
 	text-align: left;
-	white-space: pre;
+	white-space: pre-wrap;
 	word-spacing: normal;
 	word-break: normal;
 	font-size: .9em;
@@ -171,7 +171,7 @@ code[class*="language-css"] {
 	font-family: Menlo, Monaco, Consolas, "Andale Mono", "Ubuntu Mono", "Courier New", monospace;
 	direction: ltr;
 	text-align: left;
-	white-space: pre;
+	white-space: pre-wrap;
 	word-spacing: normal;
 	word-break: normal;
 	line-height: 1.5;
